<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PrioritetFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/PrirotitetTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kojoj_grupi_pripadate"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.18" />

            <RadioGroup
                android:id="@+id/radioGroup3"
                android:layout_width="238dp"
                android:layout_height="373dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.536">

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/medicinski_radnici"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/osobe_u_stara_kim_domovima"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/osobe_sa_hroni_nim_bolestima"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/osobe_starije_od_75_godina"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radioButton5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/zaposleni_u_obrazovnim_ustanovama"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radioButton6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ostalo"
                    android:textSize="20sp" />

            </RadioGroup>

            <Button
                android:id="@+id/DugmeDalje4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dalje"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.857" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>