<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InfoFragment">


        <TextView
            android:id="@+id/info_ime_prezime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_ime_prezime"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.185"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.110000014" />

        <TextView
            android:id="@+id/info_godine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_godine"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_ime_prezime"
            app:layout_constraintVertical_bias="0.18" />

        <TextView
            android:id="@+id/info_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_email"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_godine"
            app:layout_constraintVertical_bias="0.16000003" />

        <TextView
            android:id="@+id/info_spol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_spol"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_email"
            app:layout_constraintVertical_bias="0.19" />

        <EditText
            android:id="@+id/info_email_slanje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/info_spol"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_email" />

        <EditText
            android:id="@+id/info_datum_slanje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/datum"
            android:inputType="date"
            app:layout_constraintBottom_toTopOf="@+id/info_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_godine" />

        <RadioGroup
            android:id="@+id/info_spol_slanje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.34"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_spol"
            app:layout_constraintVertical_bias="0.19">

            <RadioButton
                android:id="@+id/info_spol_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/musko"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/info_spol" />

            <RadioButton
                android:id="@+id/info_spol_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zensko"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/info_spol_1"
                app:layout_constraintVertical_bias="0.0" />
        </RadioGroup>

        <EditText
            android:id="@+id/info_ime_prezime_slanje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ime"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/info_godine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_ime_prezime" />

        <Button
            android:id="@+id/posalji_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uvod_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.88" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>