<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Pitanje1Fragment">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="319dp"
            android:layout_height="126dp"
            android:width="350sp"
            android:text="@string/pitanje1"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.251" />

        <CheckBox
            android:id="@+id/check_box_1"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:text="@string/odgovor1"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.445" />

        <CheckBox
            android:id="@+id/check_box_2"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:text="@string/odgovor2"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/check_box_1"
            app:layout_constraintVertical_bias="0.0" />

        <CheckBox
            android:id="@+id/check_box_3"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:text="@string/odgovor3"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/check_box_2"
            app:layout_constraintVertical_bias="0.0" />

        <CheckBox
            android:id="@+id/check_box_4"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:text="@string/odgovor4"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/check_box_3"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/dalje_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pitanje1_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.81" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>