<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OdabirVakcineFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/OdabirVakcine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/odaberite_koju_vakcinu_elite"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.311" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="226dp"
            android:layout_height="217dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.54">

            <RadioButton
                android:id="@+id/radioDugmeAZ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/astrazeneca"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioDugmeSV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sputnik_v"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioDugmePf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pfizer"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioDugmeBIBP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bibp"
                android:textSize="20sp" />
        </RadioGroup>

        <Button
            android:id="@+id/Dugme_dalje1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dalje"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.78" />

        <Button
            android:id="@+id/EnglishButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="English"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.883"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.137" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
</layout>