<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Pitanje2Fragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/DugmeDalje3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dalje"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.713" />

            <TextView
                android:id="@+id/pitanje2TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/da_li_imate_bih_dr_avljanstvo"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.335" />

            <RadioGroup
                android:id="@+id/radioGroup2"
                android:layout_width="222dp"
                android:layout_height="124dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/radioButtonDa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/da"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radioButtonNe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ne"
                    android:textSize="20sp" />
            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>