<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".VakcineFragment">


        <TextView
            android:id="@+id/prvaVakcina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="300dp"
            android:text="@string/prvaVakcina"
            android:textAlignment="viewStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.183" />

        <TextView
            android:id="@+id/drugaVakcina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="300dp"
            android:text="@string/drugaVakcina"
            android:textAlignment="viewStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prvaVakcina"
            app:layout_constraintVertical_bias="0.111" />

        <TextView
            android:id="@+id/trecaVakcina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="300dp"
            android:text="@string/trecaVakcina"
            android:textAlignment="viewStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/drugaVakcina"
            app:layout_constraintVertical_bias="0.125" />

        <TextView
            android:id="@+id/cetvrtaVakcina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="300dp"
            android:text="@string/cetvrtaVakcina"
            android:textAlignment="viewStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trecaVakcina"
            app:layout_constraintVertical_bias="0.205" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>